--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section class="container">
 
-        <canvas width="900" height="600"></canvas>
+        <canvas width="900" height="600" id="screen"></canvas>
 
         <div>
             <section class="tool-box">
@@ -50,8 +50,10 @@
             </section>
             
             <section class="tool-box">
-                <button class="button__tool button__save">
-                    <span class="material-symbols-outlined">folder</span>
+                <button class="button__tool button__download" id="download">
+                    <span class="material-symbols-outlined">
+                        download_for_offline
+                        </span>
                 </button>
             </section>
             <section class="tool-box">
@@ -63,7 +65,7 @@
         </div>
 
     </section>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
